[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/Bread3.png" type="Texture" id=1]
[ext_resource path="res://levels/level4/BreadClick.gd" type="Script" id=2]
[ext_resource path="res://levels/level4/BreadButton.gd" type="Script" id=3]
[ext_resource path="res://levels/level4/HUD.gd" type="Script" id=4]
[ext_resource path="res://ui/SplashScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Bread3BitMask.png" type="BitMap" id=6]
[ext_resource path="res://art/Bakery.png" type="Texture" id=7]
[ext_resource path="res://ui/BreadButton.tscn" type="PackedScene" id=8]

[node name="BreadClick" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BreadButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 100, 100 )
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 6 )
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Score" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 38.0
text = "Bread: 0"

[node name="GridContainer" type="GridContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -254.0
margin_top = -92.0

[node name="NextLevelButton" type="Button" parent="HUD/GridContainer"]
margin_right = 254.0
margin_bottom = 44.0
disabled = true
text = "Next Level"

[node name="ResetButton" type="Button" parent="HUD/GridContainer"]
margin_top = 48.0
margin_right = 254.0
margin_bottom = 92.0
text = "Reset"

[node name="MainTimer" type="Timer" parent="."]

[node name="SplashScreen" parent="." instance=ExtResource( 5 )]
visible = false
game_name = "BreadClick"
level_number = 4

[node name="BakeryButton" parent="." instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 32.0
margin_right = 13.0
margin_bottom = 238.0
rect_scale = Vector2( 0.5, 0.5 )
text = "0"
icon = ExtResource( 7 )

[connection signal="button_down" from="BreadButton" to="BreadButton" method="_on_BreadButton_button_down"]
[connection signal="button_up" from="BreadButton" to="BreadButton" method="_on_BreadButton_button_up"]
[connection signal="mouse_entered" from="BreadButton" to="BreadButton" method="_on_BreadButton_mouse_entered"]
[connection signal="mouse_exited" from="BreadButton" to="BreadButton" method="_on_BreadButton_mouse_exited"]
[connection signal="pressed" from="BreadButton" to="." method="_on_BreadButton_pressed"]
[connection signal="pressed" from="HUD/GridContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="HUD/GridContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="game_tick"]
